--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome file</title>
+  <title>CV - Mykola Pechenyu</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
@@ -54,14 +54,6 @@
 </ul>
 <hr>
 <h3 id="online-profiles"><strong>Online Profiles</strong></h3>
-<ul>
-<li>
-<p><strong>GitHub</strong>: <a href="https://github.com/NickPaimon">Mykola’s GitHub</a></p>
-</li>
-<li>
-<p><strong>Upwork</strong>: <a href="https://www.upwork.com/freelancers/~011ed05000b4d2e14c">Mykola on Upwork</a></p>
-</li>
-</ul>
 <hr>
 <h3 id="project-portfolio"><strong>Project Portfolio</strong></h3>
 <h4 id="envestnet--react-developer"><strong>Envestnet</strong> | <em>React Developer</em></h4>
