--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 <p><strong>Email</strong>: <a href="mailto:snegovik3500@gmail.com">snegovik3500@gmail.com</a></p>
 <p><strong>Telegram</strong>: <a href="https://t.me/Paimons_Fury">@MykolaPecheniuk</a></p>
 <hr>
-<p><strong>GitHub</strong>: <a href="https://github.com/NickPaimon">Mykola’s GitHub</a></p>
-<p><strong>Upwork</strong>: <a href="https://www.upwork.com/freelancers/~011ed05000b4d2e14c">Mykola on Upwork</a></p>
-<hr>
 <h3 id="professional-background"><strong>Professional Background</strong></h3>
 <ul>
 <li>
@@ -54,6 +51,10 @@
 </ul>
 <hr>
 <h3 id="online-profiles"><strong>Online Profiles</strong></h3>
+<ul>
+  <li><p><strong>GitHub</strong>: <a href="https://github.com/NickPaimon">Mykola’s GitHub</a></p></li>
+  <li><p><strong>Upwork</strong>: <a href="https://www.upwork.com/freelancers/~011ed05000b4d2e14c">Mykola on Upwork</a></p></li>
+</ul>
 <hr>
 <h3 id="project-portfolio"><strong>Project Portfolio</strong></h3>
 <h4 id="envestnet--react-developer"><strong>Envestnet</strong> | <em>React Developer</em></h4>
