--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV - Mykola Pechenyu</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
-  <link rel="shortcut icon" href="favicons/icon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicons/icon.html" type="image/x-icon">
 </head>
 
 <body class="stackedit">
