--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV - Mykola Pechenyu</title>
-  <link rel="shortcut icon" href="favicons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
