--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="stackedit">
   <div class="stackedit__html"><h1 id="mykola-pecheniuk"><strong>Mykola Pecheniuk</strong></h1>
-<h2 id="reactreact-native-developer--over-3-years-of-experience"><em>React/React Native Developer</em> | Over 3 Years of Experience</h2>
+<h2 id="reactreact-native-developer--over-3-years-of-experience"><em>React/React Native Developer</em> | 4 Years of Experience</h2>
 <p><img src="https://i.postimg.cc/qRFZXqMr/1.png" alt="Mykola Pecheniuk"></p>
 <p><strong>Location</strong>: Ukraine</p>
 <p><strong>English Level</strong>: C1</p>
