added new projects

--- a/index.html
+++ b/index.html
@@ -3,52 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV - Mykola Pechenyu</title>
+    <title>CV - Mykola Pechenyuk</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackedit.io/style.css" />
   </head>
-
   <body class="stackedit">
     <div class="stackedit__html">
+    <img src="https://i.postimg.cc/qRFZXqMr/1.png" alt="Mykola Pecheniuk" />
       <h1 id="mykola-pecheniuk"><strong>Mykola Pecheniuk</strong></h1>
-      <h2 id="reactreact-native-developer--over-3-years-of-experience">
+      <h2 id="reactreact-native-developer--over-4-years-of-experience">
         <em>React/React Native Developer</em> | 4 Years of Experience
       </h2>
-      <p>
-        <img src="https://i.postimg.cc/qRFZXqMr/1.png" alt="Mykola Pecheniuk" />
-      </p>
       <p><strong>Location</strong>: Ukraine, Lviv region, Brody</p>
       <p><strong>English Level</strong>: C1</p>
       <hr />
-      <p>
-        <strong>Phone</strong>:
-        <a href="tel:+380666785859">+380 (66) 678-58-59</a>
-      </p>
-      <p>
-        <strong>Email</strong>:
-        <a href="mailto:snegovik3500@gmail.com">snegovik3500@gmail.com</a>
-      </p>
-      <p>
-        <strong>Telegram</strong>:
-        <a href="https://t.me/Paimons_Fury">@MykolaPecheniuk</a>
-      </p>
+      <p><strong>Phone</strong>: <a href="tel:+380666785859">+380 (66) 678-58-59</a></p>
+      <p><strong>Email</strong>: <a href="mailto:snegovik3500@gmail.com">snegovik3500@gmail.com</a></p>
+      <p><strong>Telegram</strong>: <a href="https://t.me/Paimons_Fury">@MykolaPecheniuk</a></p>
       <hr />
-      <h3 id="professional-background">
-        <strong>Professional Background</strong>
-      </h3>
+      <h3 id="professional-background"><strong>Professional Background</strong></h3>
       <ul>
         <li>
-          <p>
-            <strong>Military Helicopter Pilot</strong> (10 years): Developed key
-            skills in leadership, teamwork, and stress management.
-          </p>
+          <p><strong>Military Helicopter Pilot</strong> (10 years): Developed key skills in leadership, teamwork, and stress management.</p>
         </li>
         <li>
-          <p>
-            <strong>Peacekeeping Operation in DR Congo</strong> (7 months):
-            Served as an onboard interpreter, honing communication and
-            problem-solving skills.
-          </p>
+          <p><strong>Peacekeeping Operation in DR Congo</strong> (7 months): Served as an onboard interpreter, honing communication and problem-solving skills.</p>
         </li>
       </ul>
       <hr />
@@ -60,46 +39,40 @@
       <h3 id="core-skills"><strong>Core Skills</strong></h3>
       <ul>
         <li>
-          <p>
-            <strong>Front-End Development</strong>: Proficient in React, React
-            Native, Redux, Redux Toolkit, HTML5, CSS3, JavaScript, TypeScript.
-          </p>
+          <p><strong>Front-End Development</strong>: Proficient in React, React Native, Redux, Redux Toolkit, HTML5, CSS3, JavaScript, TypeScript.</p>
         </li>
         <li>
-          <p>
-            <strong>Back-End &amp; Database Management</strong>: Experienced
-            with Typeorm, MySQL, Nest.js.
-          </p>
+          <p><strong>Back-End & Database Management</strong>: Experienced with Typeorm, MySQL, Nest.js.</p>
         </li>
         <li>
-          <p>
-            <strong>Version Control &amp; CI/CD</strong>: Skilled in Git,
-            Firebase.
-          </p>
+          <p><strong>Version Control & CI/CD</strong>: Skilled in Git, Firebase.</p>
         </li>
         <li>
-          <p>
-            <strong>Development Environments</strong>: Efficient in VS Code,
-            Jira, Slack, Teams, Trello, Android Studio, Xcode.
-          </p>
+          <p><strong>Development Environments</strong>: Efficient in VS Code, Jira, Slack, Teams, Trello, Android Studio, Xcode.</p>
+        </li>
+      </ul>
+      <hr />
+      <h3 id="ai-tools"><strong>AI Tools</strong></h3>
+      <ul>
+        <li>
+          <p>Full proficiency in prompt engineering as per official documentation from OpenAI and using best practices. Implemented solutions prior to the discovery of Prompt Injection. Familiar with documentation for developments such as Copilot, Quokka.</p>
+        </li>
+      </ul>
+      <hr />
+      <h3 id="frameworks-and-libs"><strong>Frameworks and Libraries</strong></h3>
+      <ul>
+        <li>
+          <p>Well-versed and experienced with HighCharts, StoryBook.</p>
         </li>
       </ul>
       <hr />
       <h3 id="online-profiles"><strong>Online Profiles</strong></h3>
       <ul>
         <li>
-          <p>
-            <strong>GitHub</strong>:
-            <a href="https://github.com/NickPaimon">Mykola’s GitHub</a>
-          </p>
+          <p><strong>GitHub</strong>: <a href="https://github.com/NickPaimon">Mykola’s GitHub</a></p>
         </li>
         <li>
-          <p>
-            <strong>Upwork</strong>:
-            <a href="https://www.upwork.com/freelancers/~011ed05000b4d2e14c"
-              >Mykola on Upwork</a
-            >
-          </p>
+          <p><strong>Upwork</strong>: <a href="https://www.upwork.com/freelancers/~011ed05000b4d2e14c">Mykola on Upwork</a></p>
         </li>
       </ul>
       <hr />
@@ -107,139 +80,95 @@
       <h4 id="envestnet--react-developer">
         <strong>Envestnet</strong> | <em>React Developer</em>
       </h4>
-      <p>
-        <strong>Duration</strong>: 16 months | <strong>Team Size</strong>: 18
-        members
-      </p>
+      <p><strong>Duration</strong>: 16 months | <strong>Team Size</strong>: 18 members</p>
       <ul>
         <li>
-          <p>
-            Spearheaded front-end development using Highcharts JS, playing a
-            pivotal role in transitioning the application from V4 to V5.
-          </p>
+          <p>Spearheaded front-end development using Highcharts JS, playing a pivotal role in transitioning the application from V4 to V5.</p>
         </li>
         <li>
-          <p>
-            Developed a widget library and design system for V5, optimizing
-            performance and fixing critical bugs.
-          </p>
+          <p>Developed a widget library and design system for V5, optimizing performance and fixing critical bugs.</p>
         </li>
         <li>
-          <p>
-            <strong>Key Technologies</strong>: React, Redux Toolkit, Highcharts
-            JS, TypeScript, SCSS.
-          </p>
+          <p><strong>Key Technologies</strong>: React, Redux Toolkit, Highcharts JS, TypeScript, SCSS.</p>
         </li>
       </ul>
       <h4 id="picit--react-native-developer">
         <strong>Picit</strong> | <em>React Native Developer</em>
       </h4>
-      <p>
-        <strong>Duration</strong>: 7 months | <strong>Team Size</strong>: 5
-        members
-      </p>
+      <p><strong>Duration</strong>: 7 months | <strong>Team Size</strong>: 5 members</p>
       <ul>
         <li>
-          <p>
-            Led the development from architecture to deployment, establishing
-            the app’s foundational structure.
-          </p>
+          <p>Led the development from architecture to deployment, establishing the app’s foundational structure.</p>
         </li>
         <li>
-          <p>
-            Successfully managed deployments to Google Play Market and Apple
-            Store.
-          </p>
+          <p>Successfully managed deployments to Google Play Market and Apple Store.</p>
         </li>
         <li>
-          <p>
-            <strong>App Description</strong>: A social networking app for photo
-            sharing and voting.
-          </p>
+          <p><strong>App Description</strong>: A social networking app for photo sharing and voting.</p>
         </li>
         <li>
-          <p>
-            <strong>Technologies</strong>: React Native, Redux Toolkit,
-            TypeScript.
-          </p>
+          <p><strong>Technologies</strong>: React Native, Redux Toolkit, TypeScript.</p>
         </li>
       </ul>
       <h4 id="coinlib--react-native-developer">
         <strong>Coinlib</strong> | <em>React Native Developer</em>
       </h4>
-      <p>
-        <strong>Duration</strong>: 6 months | <strong>Team Size</strong>: 11
-        members
-      </p>
+      <p><strong>Duration</strong>: 6 months | <strong>Team Size</strong>: 11 members</p>
       <ul>
         <li>
-          <p>
-            Focused on front-end development, introducing new features, and
-            leading code refactoring efforts.
-          </p>
+          <p>Focused on front-end development, introducing new features, and leading code refactoring efforts.</p>
         </li>
         <li>
-          <p>
-            Played a key role in documenting the development process and
-            ensuring successful app market deployments.
-          </p>
+          <p>Played a key role in documenting the development process and ensuring successful app market deployments.</p>
         </li>
         <li>
-          <p>
-            <strong>App Description</strong>: A comprehensive tool for
-            cryptocurrency traders and enthusiasts.
-          </p>
+          <p><strong>App Description</strong>: A comprehensive tool for cryptocurrency traders and enthusiasts.</p>
         </li>
         <li>
-          <p>
-            <strong>Technologies</strong>: React Native, Node.js, Nest.js,
-            TypeScript, Redux.
-          </p>
+          <p><strong>Technologies</strong>: React Native, Node.js, Nest.js, TypeScript, Redux.</p>
         </li>
       </ul>
       <h4 id="performa--react-native-developer">
         <strong>Performa</strong> | <em>React Native Developer</em>
       </h4>
-      <p>
-        <strong>Duration</strong>: 2 months | <strong>Team Size</strong>: 2
-        members
-      </p>
+      <p><strong>Duration</strong>: 2 months | <strong>Team Size</strong>: 2 members</p>
       <ul>
         <li>
-          <p>
-            Concentrated on bug fixing, performance tuning, and maintaining high
-            standards in app deployment.
-          </p>
+          <p>Concentrated on bug fixing, performance tuning, and maintaining high standards in app deployment.</p>
         </li>
         <li>
-          <p>
-            <strong>App Description</strong>: Optimized for performance and user
-            experience.
-          </p>
+          <p><strong>App Description</strong>: Optimized for performance and user experience.</p>
         </li>
         <li>
-          <p>
-            <strong>Responsibilities</strong>: Front-end development; Fixing
-            bugs; Monitoring each service deployment and validating the services
-            across all environments; Code refactoring; Deploying apps to app
-            store and play market.
-          </p>
+          <p><strong>Responsibilities</strong>: Front-end development; Fixing bugs; Monitoring each service deployment and validating the services across all environments; Code refactoring; Deploying apps to app store and play market.</p>
+        </li>
+      </ul>
+      <h4 id="endoscope-dashboard--react-developer">
+        <strong>Endoscope Dashboard</strong> | <em>React Developer</em>
+      </h4>
+      <p><strong>Duration</strong>: Current Project</p>
+      <ul>
+        <li>
+          <p>Developed a scalable and responsive UI for 'Endoscope Dashboard' using Sun Calibration Tool with Tailwind and React.</p>
+        </li>
+        <li>
+          <p>Implemented a complete login/sign up system and routing mechanism, enhancing site security and user navigation.</p>
+        </li>
+        <li>
+          <p>Displayed a high amount of data using Plotly JS with high performance, ensuring efficient data visualization.</p>
+        </li>
+        <li>
+          <p><strong>Technologies</strong>: Tailwind, React, REST API, Plotly, Git.</p>
         </li>
       </ul>
       <hr />
       <h3 id="contact-information"><strong>Contact Information</strong></h3>
       <ul>
         <li>
-          <p>
-            <strong>Email</strong>:
-            <a href="mailto:snegovik3500@gmail.com">snegovik3500@gmail.com</a>
-          </p>
+          <p><strong>Email</strong>: <a href="mailto:snegovik3500@gmail.com">snegovik3500@gmail.com</a></p>
         </li>
         <li>
-          <p>
-            <strong>Phone</strong>:
-            <a href="tel:+380666785859">+380 (66) 678-58-59</a>
-          </p>
+          <p><strong>Phone</strong>: <a href="tel:+380666785859">+380 (66) 678-58-59</a></p>
         </li>
       </ul>
     </div>
